--- a/styles/style.css
+++ b/styles/style.css
@@ -9,23 +9,446 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
+
+
 .header {
+  display: flex;
+  position: relative;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  background-color: #f2f2f2;
+
   /* выше установили ограничения для секции */
+}
+
+.logo {
+  background-image: url('../images/logo_place_header.svg');
+  width: 183px;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  z-index: 2;
+}
+
+.logo_place_header {
+  position: absolute;
+  height: 32px;
+  top: 30px;
+  left: 64px;
+}
+
+.header__title {
+  font-size: 102px;
+  font-weight: bold;
+  line-height: 96px;
+  width: 730px;
+  min-height: 0;
+  height: auto;
+  margin: auto 64px;
+  background-color: transparent;
+  z-index: 2;
+  }
+
+.header__subtitle  {
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 25px;
+
+  width: 388px;
+  min-height: 0;
+  height: auto;
+  position: absolute;
+  left: 64px;
+  bottom: 30px;
+  background-color: transparent;
+  z-index: 2;
+  display: block;
+}
+
+.header__link {
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 25px;
+  width: 80px;
+  min-height: 0;
+  height: auto;
+  margin-right: 0;
+  background-color: transparent;
+  z-index: 2;
+  display: inline;
+
+}
+
+.header__main-illustration {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 765px;
+  height: 608px;
+  background-color: transparent;
+  z-index: 1;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
+  background-color: #2f80ed;
+  position: absolute;
+  top: 64px;
+  right: 0;
   height: 568px;
   width: 568px;
 }
 
-/* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
-  width: 200px;
+.description {
+  
+  display: flex;
+  justify-content: space-around;
+}
+
+.two-columns {
+
+  display: flex;
+  width: 80%;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  justify-content: space-between;
+  align-items: flex-start;
+
+}
+
+.two-columns__brief {
+  font-size: 18px;
+  font-weight: normal;
+  color: #2f80ed;
+  line-height: 1.2;
+  margin: 0;
+  width: 175px;
+  height: 100%;
+
+}
+
+.two-columns__main-text {
+  font-size: 24px;
+  font-weight: normal;
+  line-height: 34px;
+  margin: 0;
+  flex-direction: column;
+  align-content: space-between;
+  align-items: flex-end;
+  width: 80%;
+  gap: 30px;
+
+}
+
+.two-columns__paragraph {
+  margin: 0;
+  width: 100%;
+  min-width: 784;
+
+}
+
+.digits {
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: fit-content;
+ 
+}
+
+.section-title {
+
+  font-size: 60px;
+  font-weight: bold;
+  line-height: 1.15;
+  width: 60%;
+  text-align: center;
+  margin-top: 100px;
+  margin-bottom: 20px;
+
+}
+
+.section-subtitle {
+
+  font-size: 34px;
+  font-weight: normal;
+  line-height: 34px;
+  width: 60%;
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.table {
+  
+  width: 1100px;
+  height: fit-content;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  margin-bottom: 100px;
+  
+}
+
+.table__row {
+  margin: 0;
+  margin-top: 60px;
+}
+
+.table__cell {
+  
+  width: 250px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
+  margin: 0;
+}
+
+.table__heading {
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 1.15;
+  width: 250px;
+  margin: 0;
+}
+
+.table__text {
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 1.2;
+  width: 250px;
+  margin: 0;
+}
+
+.feynman {
+  
+  position: relative;
+  background-color: #f2f2f2;
+  background-image: url('../images/feynman.png');
+  background-repeat: no-repeat;
+  background-size: 867px 637px;
+  background-position: left bottom;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 890px;
+  margin: 0;
+}
+
+.feynman__title {
+  font-size: 120px;
+  font-weight: bold;
+  line-height: 1.15;
+  text-align: center;
+  background-color: transparent;
+  background-image: none;
+  width: 648px;
+  height: auto;
+  margin-top: 100px;
+}
+
+.feynman__subtitle {
+  font-size: 36px;
+  font-weight: bold;
+  line-height: 51px;
+  background-color: transparent;
+  background-image: none;
+  width: auto;
+  height: auto;
+  margin-top: 70px;
+}
+
+.feynman__link {
+  position: absolute;
+  font-size: 36px;
+  font-weight: bold;
+  line-height: 51px;
+  text-decoration: none;
+  background-color: transparent;
+  background-image: none;
+  width: auto;
+  height: auto;
+  top: 50%;
+  right: 48px;
+}
+
+.kaufman {
+  position: relative;
+  background-color: #1f1f1f;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: fit-content;
+  z-index: 1;
+  overflow: hidden;
+  
+}
+
+.section-title_theme_dark {
+
   color: white;
-  margin-right: 0;
+  font-size: 60px;
+  font-weight: bold;
+  line-height: 1.15;
+  width: 60%;
+  text-align: center;
+  margin-top: 90px;
+  margin-bottom: 20px;
+
+}
+
+.section-subtitle_theme_dark {
+
+  color: white;
+  font-size: 34px;
+  font-weight: normal;
+  line-height: 34px;
+  width: 60%;
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.table_theme_dark {
+  
+  width: 1100px;
+  height: fit-content;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  margin-bottom: 90px;
+  
+}
+
+.table__row_theme_dark {
+  margin: 0;
   margin-top: 80px;
 }
+
+.table__heading_theme_dark {
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 1.15;
+  width: 200px;
+  margin: 0;
+}
+
+.table__text_theme_dark {
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 1.2;
+  width: 200px;
+  margin: 0;
+}
+
+/* и элемента с модификатором вида ключ-значение */
+.table__cell_theme_dark {
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
+  margin: 0;
+  width: 200px;
+  color: white;
+}
+
+.kaufman__triangle {
+  position: absolute;
+  z-index: -1;
+  width: 877px;
+  height: 877px;
+  right: -210px;
+  top: 0;
+}
+
+.footer {
+
+  background-color: #1f1f1f;
+  display: flex;
+  height: fit-content;
+  justify-content: center;
+ 
+  
+}
+
+.footer__columns {
+
+  margin-top: 60px;
+  margin-bottom: 40px;
+  flex-direction: row;
+  width: 90%;
+  margin-top: 60px;
+  margin-bottom: 40px;
+  justify-content: space-between;
+  min-height: 250px;
+  
+}
+
+.footer__column_content_copyright {
+  flex-direction: column;
+  flex-basis: 711px;
+  height: auto;
+  justify-content: space-between;
+}
+
+.logo_place_footer{
+
+  height: 35px;
+}
+
+.footer__author{
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 25px;
+  color: #f2f2f2;
+
+  margin: 0;
+  width: fit-content;
+  margin-bottom: 18px;
+  margin-top: 18px;
+
+}
+
+.footer__column_content_info {
+  flex-direction: column;
+}
+
+.footer__column-heading{
+  margin: 0;
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 30px;
+  color: #f2f2f2;
+}
+
+.footer__column-links {
+  
+  margin-top: 20px;
+  margin-bottom: 16px;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 5px;
+  
+}
+
+.footer__column-link {
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 30px;
+  color: #f2f2f2;
+  text-decoration: none;
+  align-self: start;
+  }
+
+.footer__column_content_social {
+  flex-direction: column;
+}
+
+.footer__footer-icon {
+  width: 16px;
+  height: 16px;
+}
+
+
+
+
