--- a/styles/style.css
+++ b/styles/style.css
@@ -12,13 +12,15 @@
 
 
 .header {
+  margin: 0;
+  padding: 0;
   display: flex;
   position: relative;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
   background-color: #f2f2f2;
-
+  align-items: center;
   /* выше установили ограничения для секции */
 }
 
@@ -45,7 +47,8 @@
   width: 730px;
   min-height: 0;
   height: auto;
-  margin: auto 64px;
+  margin: 0;
+  margin-left: 64px;
   background-color: transparent;
   z-index: 2;
   }
@@ -54,11 +57,11 @@
   font-size: 18px;
   font-weight: normal;
   line-height: 25px;
-
   width: 388px;
   min-height: 0;
   height: auto;
   position: absolute;
+  margin: 0;
   left: 64px;
   bottom: 30px;
   background-color: transparent;
@@ -70,14 +73,15 @@
   font-size: 18px;
   font-weight: normal;
   line-height: 25px;
-  width: 80px;
+  text-decoration: none;
+  color: #2f80ed;
+  width:fit-content;
   min-height: 0;
   height: auto;
   margin-right: 0;
   background-color: transparent;
   z-index: 2;
   display: inline;
-
 }
 
 .header__main-illustration {
@@ -86,6 +90,7 @@
   bottom: 0;
   width: 765px;
   height: 608px;
+  object-fit: cover;
   background-color: transparent;
   z-index: 1;
 }
@@ -101,20 +106,22 @@
 }
 
 .description {
-  
+  margin: 0;
+  padding: 0;
   display: flex;
   justify-content: space-around;
 }
 
 .two-columns {
-
   display: flex;
   width: 80%;
   margin-top: 100px;
-  margin-bottom: 100px;
   justify-content: space-between;
   align-items: flex-start;
+}
 
+.bold {
+  font-weight: bold;
 }
 
 .two-columns__brief {
@@ -125,7 +132,6 @@
   margin: 0;
   width: 175px;
   height: 100%;
-
 }
 
 .two-columns__main-text {
@@ -133,32 +139,29 @@
   font-weight: normal;
   line-height: 34px;
   margin: 0;
+  display: flex;
   flex-direction: column;
   align-content: space-between;
   align-items: flex-end;
   width: 80%;
   gap: 30px;
-
 }
 
 .two-columns__paragraph {
   margin: 0;
   width: 100%;
-  min-width: 784;
-
 }
 
 .digits {
-
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   height: fit-content;
- 
 }
 
 .section-title {
-
   font-size: 60px;
   font-weight: bold;
   line-height: 1.15;
@@ -166,11 +169,9 @@
   text-align: center;
   margin-top: 100px;
   margin-bottom: 20px;
-
 }
 
 .section-subtitle {
-
   font-size: 34px;
   font-weight: normal;
   line-height: 34px;
@@ -181,29 +182,26 @@
 }
 
 .table {
-  
   width: 1100px;
   height: fit-content;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
   margin-bottom: 100px;
-  
 }
 
-.table__row {
-  margin: 0;
-  margin-top: 60px;
+tr {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .table__cell {
-  
   width: 250px;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 20px;
   margin: 0;
+  margin-top: 60px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px
 }
+
 
 .table__heading {
   font-size: 24px;
@@ -218,11 +216,12 @@
   font-weight: normal;
   line-height: 1.2;
   width: 250px;
-  margin: 0;
+  margin: 0;  
 }
 
 .feynman {
-  
+  margin: 0;
+  padding: 0;
   position: relative;
   background-color: #f2f2f2;
   background-image: url('../images/feynman.png');
@@ -232,8 +231,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 890px;
-  margin: 0;
+  min-height: 890px;
 }
 
 .feynman__title {
@@ -245,35 +243,41 @@
   background-image: none;
   width: 648px;
   height: auto;
+  margin: 0;
   margin-top: 100px;
 }
 
 .feynman__subtitle {
   font-size: 36px;
-  font-weight: bold;
+  font-weight: normal;
   line-height: 51px;
   background-color: transparent;
   background-image: none;
   width: auto;
   height: auto;
+  margin: 0;
   margin-top: 70px;
 }
 
 .feynman__link {
   position: absolute;
   font-size: 36px;
-  font-weight: bold;
+  font-weight: normal;
   line-height: 51px;
+  color: #2f80ed;
   text-decoration: none;
   background-color: transparent;
   background-image: none;
   width: auto;
   height: auto;
+  margin: 0;
   top: 50%;
   right: 48px;
 }
 
 .kaufman {
+  margin: 0;
+  padding: 0;
   position: relative;
   background-color: #1f1f1f;
   display: flex;
@@ -282,74 +286,34 @@
   height: fit-content;
   z-index: 1;
   overflow: hidden;
-  
 }
 
 .section-title_theme_dark {
-
   color: white;
-  font-size: 60px;
-  font-weight: bold;
-  line-height: 1.15;
-  width: 60%;
-  text-align: center;
   margin-top: 90px;
-  margin-bottom: 20px;
-
 }
 
 .section-subtitle_theme_dark {
-
   color: white;
-  font-size: 34px;
-  font-weight: normal;
-  line-height: 34px;
-  width: 60%;
-  text-align: center;
-  margin-top: 0;
-  margin-bottom: 0;
 }
 
 .table_theme_dark {
-  
-  width: 1100px;
-  height: fit-content;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
   margin-bottom: 90px;
-  
-}
-
-.table__row_theme_dark {
-  margin: 0;
-  margin-top: 80px;
-}
-
-.table__heading_theme_dark {
-  font-size: 24px;
-  font-weight: bold;
-  line-height: 1.15;
-  width: 200px;
-  margin: 0;
-}
-
-.table__text_theme_dark {
-  font-size: 18px;
-  font-weight: normal;
-  line-height: 1.2;
-  width: 200px;
-  margin: 0;
 }
 
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 20px;
-  margin: 0;
   width: 200px;
+  margin-top: 80px;
   color: white;
+}
+
+.table__heading_theme_dark {
+  width: 200px;
+}
+
+.table__text_theme_dark {
+  width: 200px;
 }
 
 .kaufman__triangle {
@@ -362,35 +326,34 @@
 }
 
 .footer {
-
+  margin: 0;
+  padding: 0;
   background-color: #1f1f1f;
   display: flex;
   height: fit-content;
   justify-content: center;
- 
-  
+  min-height: 350px;
 }
 
 .footer__columns {
-
   margin-top: 60px;
   margin-bottom: 40px;
+  display: flex;
   flex-direction: row;
   width: 90%;
   justify-content: space-between;
-  min-height: 250px;
-  
 }
 
 .footer__column_content_copyright {
   flex-direction: column;
   flex-basis: 711px;
   height: auto;
+  display: flex;
   justify-content: space-between;
 }
 
 .logo_place_footer{
-
+  background-image: url('../images/logo_place_footer.svg');
   height: 35px;
 }
 
@@ -399,15 +362,14 @@
   font-weight: normal;
   line-height: 25px;
   color: #f2f2f2;
-
   margin: 0;
   width: fit-content;
   margin-bottom: 18px;
   margin-top: 18px;
-
 }
 
 .footer__column_content_info {
+  display: flex;
   flex-direction: column;
 }
 
@@ -420,13 +382,11 @@
 }
 
 .footer__column-links {
-  
   margin-top: 20px;
   margin-bottom: 16px;
+  display: flex;
   flex-direction: column;
   justify-content: space-between;
-  gap: 5px;
-  
 }
 
 .footer__column-link {
@@ -436,9 +396,10 @@
   color: #f2f2f2;
   text-decoration: none;
   align-self: start;
-  }
+}
 
 .footer__column_content_social {
+  display: flex;
   flex-direction: column;
 }
 
