--- a/styles/style.css
+++ b/styles/style.css
@@ -120,7 +120,7 @@
   align-items: flex-start;
 }
 
-.bold {
+.two-columns__span-accent {
   font-weight: bold;
 }
 
@@ -182,16 +182,15 @@
 }
 
 .table {
+  padding: 0;
   width: 1100px;
   height: fit-content;
   margin-bottom: 100px;
-}
-
-tr {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
 }
+
 
 .table__cell {
   width: 250px;
