--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -1,6 +1,7 @@
 .feynman {
     margin: 0;
     padding: 0;
+    margin-top: 100px;
     position: relative;
     background-color: #f2f2f2;
     background-image: url('../../images/feynman.png');
@@ -11,4 +12,5 @@
     flex-direction: column;
     align-items: center;
     min-height: 890px;
+    box-sizing: border-box;
   }
