--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -1,8 +1,11 @@
 .kaufman__triangle {
+  
     position: absolute;
     z-index: -1;
     width: 877px;
     height: 877px;
     right: -210px;
     top: 0;
+    background-image: url(../../../images/kaufman-triangle.svg);
+    background-size: cover;
   }  
