--- a/blocks/resources/__logo-zone/resources__logo-zone.css
+++ b/blocks/resources/__logo-zone/resources__logo-zone.css
@@ -1,6 +1,9 @@
 .resources__logo-zone {
+    margin: 0;
     display: flex;
+    justify-content: space-between;
     width: 1100px;
     margin-bottom: 217px;
     margin-top: 80px;
+
 }
