--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -1,7 +1,7 @@
 .feynman {
     margin: 0;
     padding: 0;
-    margin-top: 100px;
+    padding-top: 100px;
     position: relative;
     background-color: #f2f2f2;
     background-image: url('../../images/feynman.png');
